# dotfiles

./: .conclaude.yaml  .envrc  .gitconfig  .gitignore  .gitmodules  .infisical.json  .luarc.json  .mcp.json  .obsidian.vimrc  .ocamlformat  .sk-settings  .sops.yaml  .stowrc  .tmux.conf  .vimrc  .zshrc  AGENTS.md  CLAUDE.md  DEEP_VERIFICATION_REPORT.md  Dockerfile  FIXGH.md  FUZZ_TEST_SUMMARY.md  GEMINI.md  Makefile  README.md  Taskfile.yaml  anki.md  check-amd-gpu.sh  clean.sh  deep_security_test.py  desktopfiles.md  devenv.nix  dune-project  flake.nix  flake.nix.commented  flakes.nix  go.mod  gs-linux.json  gs.json  home.nix  (+18 more)
.claude/: .gitignore  .oxlintrc.json  index.ts  settings.json
.claude/commands/: cleanup-repo-root.md  create-new-example.md  fix-nix-lint-errors.md  generate-repo-documentation.md  init-claude-md-from-flake.md  initnix.md  single-commit-workflow.md  split-commits-workflow.md  testit.md  validate-all-examples.md
.claude/hooks/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.json  README.md  config.ts  deploy.sh  index.ts  notification.py  notification.ts  package.json  post_tool_use.py  pre-commit.sh  pre_tool_use.py  pre_tool_use.ts  setup-git-hooks.sh  stop.py  stop.ts  subagent_stop.py  subagent_stop.ts  test.ts  tsconfig.json  types.ts  user_prompt_submit.py  utils.ts
.config/: ashell.yaml  ashell.yml  mimeapps.list  starship.toml
.config/aerospace/: aerospace.toml
.config/ashell/: config.toml
.config/fubar/: flake.nix  shell.nix
.config/ghostty/: config  ghostty.linux  ghostty.macos
.config/home-manager/: darwin.nix  flake.nix  home-darwin.nix  home.nix  linux.nix
.config/hypr/: README.md  hyprland.conf  hyprlandd.conf  hyprmouseless.conf  hyprpaper.conf  plugins.conf  setup.sh
.config/hypr/tools/recents_xbel/: README.md  pyproject.toml
.config/hypr/tools/recents_xbel/src/recents_xbel/: __init__.py  cli.py  xbel.py
.config/hypr/tools/recents_xbel/tests/: test_xbel.py
.config/hyprshell/: config.toml
.config/kitty/: kitty.conf
.config/lazygit/: config.yml
.config/nix-darwin/: README.md  flake.nix
.config/nixos/: README.md  configuration.nix  flake.nix  hardware-configuration.nix
.config/nushell/: base_completions.nu  carapace.nu  config.nu  direnv.nu  env.nu  nix.nu  test.json  theme.nu  zox.nu
.config/rofi/: config.rasi
.config/waybar/: config.jsonc  style.css
.config/wezterm/: wezterm.lua
.config/yazi/: yazi.toml
.devenv/: nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal
.emacs.d/: init.el
.secrets/: nordToken.age  secrets.nix  secrets.yaml
_build/: .db  .digest-db  log
home-manager/: default.nix
lint-reports/: alejandra_report.txt  golangci_par_report.txt  lint_analysis_20250606_152020.txt  lint_analysis_20250606_152040.txt  python_ruff_report.txt
logs/: chat.json  notification.json  post_tool_use.json  pre_tool_use.json  stop.json  subagent_stop.json  user_prompt_submit.json
modules/: nixos-generator-wrapper.nix
modules/programs/convert_img/: .gitignore  BUGS_AND_FIXES.md  Makefile  convert_img.nix  convert_img.py  pyproject.toml  result  test_basic.py  test_convert_img.py  test_integration.py
modules/programs/convert_img/tests/: conftest.py  test_convert_img.py
modules/programs/convert_media/: Makefile  convert_media.py  default.nix  pyproject.toml  test_convert_media.py  test_integration.py
modules/programs/par/: CLAUDE.md  Cargo.toml  default.nix  flake.nix  go.mod  go.sum  main.go  par.go  par.nix
modules/programs/par/cmd/: add.go  add_test.go  clean.go  list.go  list_test.go  root.go  run.go
modules/programs/par/internal/config/: config.go
modules/programs/par/internal/editor/: editor.go  editor_test.go
modules/programs/par/internal/executor/: claude.go  job.go  pool.go
modules/programs/par/internal/filtering/: filtering.go  filtering_test.go
modules/programs/par/internal/interfaces/: implementations.go  interfaces.go  mocks.go
modules/programs/par/internal/prompts/: manager.go  template.go
modules/programs/par/internal/results/: aggregator.go  manager.go  reporter.go  storage.go
modules/programs/par/internal/terminal/: ghostty.go  manager.go  output.go
modules/programs/par/internal/worktree/: discovery.go  manager.go  types.go  validator.go
modules/programs/par/src/: error.rs  lib.rs  main.rs
modules/programs/par/src/cli/: add.rs  clean.rs  list.rs  mod.rs  run.rs
modules/programs/par/src/config/: mod.rs
modules/programs/par/src/prompts/: mod.rs
modules/programs/par/src/worktree/: mod.rs
nordvpn-flake/: README.md  module.nix
nordvpn-flakee/: flake.nix  nordvpn.nix
rices/: empty.nix
scripts/: install.sh  stow.sh
secrets/: login.age  secrets.nix  secrets.yaml
spec/: par.md
spectr/: project.md
templates/: README.md  result  vue-result
templates/askama-shell/: Cargo.toml  README.md  build.rs  package.json  tailwind.config.js
templates/askama-shell/assets/styles/: input.css
templates/askama-shell/src/: lib.rs  main.rs
templates/askama-shell/src/handlers/: auth.rs  dashboard.rs  pages.rs
templates/askama-shell/templates/: base.html  dashboard.html  index.html
templates/ocaml-shell/: .cursorrules  .envrc  .gitignore  .ocamlformat  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  dune-project  flake.nix  result  shell.nix
templates/ocaml-shell/examples/: dune
templates/ocaml-shell/lib/: dune  ocaml_template.ml
templates/ocaml-shell/test/: dune  test_ocaml_template.ml
(+475 files in other folders)
