[package]
name = "par"
version = "0.1.0"
edition = "2021"
authors = ["Conner Ohnesorge <connerohnesorge@outlook.com>"]
description = "Parallel Claude Code Runner - Run Claude Code CLI across multiple Git worktrees simultaneously"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
gix = { version = "0.64", features = ["blocking-network-client"] }
dirs = "5.0"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
crossterm = "0.28"
tabled = "0.16"
tera = "1.20"
which = "6.0"
dashmap = "6.1"
futures = "0.3"
num_cpus = "1.16"
humantime-serde = "1.1"
tempfile = "3.13"

[dev-dependencies]
tempfile = "3.13"
mockall = "0.13"
pretty_assertions = "1.4"