[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recents-xbel"
version = "0.1.0"
description = "Safely edit recently-used.xbel entries using Python stdlib XML"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "dotfiles", email = "noreply@example.com" } ]
dependencies = []

[project.scripts]
recents-xbel = "recents_xbel.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
# No dependencies; kept for compatibility with uv workflows.

